// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar should render with back button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBar
    coins={1234}
    leftIcon="Back"
    onPressLeftIcon={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 16,
              "paddingHorizontal": 16,
              "position": "absolute",
            }
          }
        >
          <Back
            color="#333333"
          />
        </TouchableOpacity>,
        <Logo
          color="#E20177"
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            }
          }
        >
          <View
            style={
              Object {
                "height": "100%",
                "justifyContent": "center",
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignSelf": "flex-start",
                "marginTop": -16,
              }
            }
          >
            <Coins
              color="#333333"
            />
          </View>
        </View>,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "center",
        "marginTop": 8,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Back
              color="#333333"
            />,
            null,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "left": 16,
            "paddingHorizontal": 16,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#333333",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "#E20177",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                }
              }
            >
              <Coins
                color="#333333"
              />
            </View>,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>,
              "style": Object {
                "height": "100%",
                "justifyContent": "center",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1234,
                "style": Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                },
              },
              "ref": null,
              "rendered": 1234,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Coins
                color="#333333"
              />,
              "style": Object {
                "alignSelf": "flex-start",
                "marginTop": -16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": "100%",
                "left": 16,
                "paddingHorizontal": 16,
                "position": "absolute",
              }
            }
          >
            <Back
              color="#333333"
            />
          </TouchableOpacity>,
          <Logo
            color="#E20177"
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "position": "absolute",
                "right": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                }
              }
            >
              <Coins
                color="#333333"
              />
            </View>
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": Array [
              <Back
                color="#333333"
              />,
              null,
            ],
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 16,
              "paddingHorizontal": 16,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "#E20177",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 36,
                      "marginBottom": -8,
                      "marginRight": 16,
                    }
                  }
                >
                  1234
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "marginTop": -16,
                  }
                }
              >
                <Coins
                  color="#333333"
                />
              </View>,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 36,
                      "marginBottom": -8,
                      "marginRight": 16,
                    }
                  }
                >
                  1234
                </YuText>,
                "style": Object {
                  "height": "100%",
                  "justifyContent": "center",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": 1234,
                  "style": Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  },
                },
                "ref": null,
                "rendered": 1234,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Coins
                  color="#333333"
                />,
                "style": Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "color": "#333333",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`TopBar should render with default props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBar
    coins={1234}
    onPressLeftIcon={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 16,
              "paddingHorizontal": 16,
              "position": "absolute",
            }
          }
        >
          <Menu
            color="#333333"
          />
        </TouchableOpacity>,
        <Logo
          color="#E20177"
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            }
          }
        >
          <View
            style={
              Object {
                "height": "100%",
                "justifyContent": "center",
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignSelf": "flex-start",
                "marginTop": -16,
              }
            }
          >
            <Coins
              color="#333333"
            />
          </View>
        </View>,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "center",
        "marginTop": 8,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Menu
              color="#333333"
            />,
            null,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "left": 16,
            "paddingHorizontal": 16,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#333333",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "#E20177",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                }
              }
            >
              <Coins
                color="#333333"
              />
            </View>,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>,
              "style": Object {
                "height": "100%",
                "justifyContent": "center",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1234,
                "style": Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                },
              },
              "ref": null,
              "rendered": 1234,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Coins
                color="#333333"
              />,
              "style": Object {
                "alignSelf": "flex-start",
                "marginTop": -16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": "100%",
                "left": 16,
                "paddingHorizontal": 16,
                "position": "absolute",
              }
            }
          >
            <Menu
              color="#333333"
            />
          </TouchableOpacity>,
          <Logo
            color="#E20177"
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "position": "absolute",
                "right": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                }
              }
            >
              <Coins
                color="#333333"
              />
            </View>
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": Array [
              <Menu
                color="#333333"
              />,
              null,
            ],
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 16,
              "paddingHorizontal": 16,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "#E20177",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 36,
                      "marginBottom": -8,
                      "marginRight": 16,
                    }
                  }
                >
                  1234
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "marginTop": -16,
                  }
                }
              >
                <Coins
                  color="#333333"
                />
              </View>,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 36,
                      "marginBottom": -8,
                      "marginRight": 16,
                    }
                  }
                >
                  1234
                </YuText>,
                "style": Object {
                  "height": "100%",
                  "justifyContent": "center",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": 1234,
                  "style": Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  },
                },
                "ref": null,
                "rendered": 1234,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Coins
                  color="#333333"
                />,
                "style": Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "color": "#333333",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`TopBar should render with menu label 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBar
    coins={1234}
    menuLabel="Menu Label"
    onPressLeftIcon={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 16,
              "paddingHorizontal": 16,
              "position": "absolute",
            }
          }
        >
          <Menu
            color="#333333"
          />
          <View
            style={
              Object {
                "marginBottom": -12,
                "marginLeft": 16,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "#333333",
                  "fontSize": 40,
                  "marginLeft": 8,
                  "marginTop": -8,
                }
              }
            >
              Menu Label
            </YuText>
          </View>
        </TouchableOpacity>,
        <Logo
          color="#E20177"
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            }
          }
        >
          <View
            style={
              Object {
                "height": "100%",
                "justifyContent": "center",
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignSelf": "flex-start",
                "marginTop": -16,
              }
            }
          >
            <Coins
              color="#333333"
            />
          </View>
        </View>,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "center",
        "marginTop": 8,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Menu
              color="#333333"
            />,
            <View
              style={
                Object {
                  "marginBottom": -12,
                  "marginLeft": 16,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 40,
                    "marginLeft": 8,
                    "marginTop": -8,
                  }
                }
              >
                Menu Label
              </YuText>
            </View>,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "left": 16,
            "paddingHorizontal": 16,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#333333",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 40,
                    "marginLeft": 8,
                    "marginTop": -8,
                  }
                }
              >
                Menu Label
              </YuText>,
              "style": Object {
                "marginBottom": -12,
                "marginLeft": 16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Menu Label",
                "style": Object {
                  "color": "#333333",
                  "fontSize": 40,
                  "marginLeft": 8,
                  "marginTop": -8,
                },
              },
              "ref": null,
              "rendered": "Menu Label",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "color": "#E20177",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                }
              }
            >
              <Coins
                color="#333333"
              />
            </View>,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>,
              "style": Object {
                "height": "100%",
                "justifyContent": "center",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1234,
                "style": Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                },
              },
              "ref": null,
              "rendered": 1234,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Coins
                color="#333333"
              />,
              "style": Object {
                "alignSelf": "flex-start",
                "marginTop": -16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": "100%",
                "left": 16,
                "paddingHorizontal": 16,
                "position": "absolute",
              }
            }
          >
            <Menu
              color="#333333"
            />
            <View
              style={
                Object {
                  "marginBottom": -12,
                  "marginLeft": 16,
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 40,
                    "marginLeft": 8,
                    "marginTop": -8,
                  }
                }
              >
                Menu Label
              </YuText>
            </View>
          </TouchableOpacity>,
          <Logo
            color="#E20177"
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "position": "absolute",
                "right": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                }
              }
            >
              <Coins
                color="#333333"
              />
            </View>
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": Array [
              <Menu
                color="#333333"
              />,
              <View
                style={
                  Object {
                    "marginBottom": -12,
                    "marginLeft": 16,
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 40,
                      "marginLeft": 8,
                      "marginTop": -8,
                    }
                  }
                >
                  Menu Label
                </YuText>
              </View>,
            ],
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 16,
              "paddingHorizontal": 16,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 40,
                      "marginLeft": 8,
                      "marginTop": -8,
                    }
                  }
                >
                  Menu Label
                </YuText>,
                "style": Object {
                  "marginBottom": -12,
                  "marginLeft": 16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Menu Label",
                  "style": Object {
                    "color": "#333333",
                    "fontSize": 40,
                    "marginLeft": 8,
                    "marginTop": -8,
                  },
                },
                "ref": null,
                "rendered": "Menu Label",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "color": "#E20177",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 36,
                      "marginBottom": -8,
                      "marginRight": 16,
                    }
                  }
                >
                  1234
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "marginTop": -16,
                  }
                }
              >
                <Coins
                  color="#333333"
                />
              </View>,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 36,
                      "marginBottom": -8,
                      "marginRight": 16,
                    }
                  }
                >
                  1234
                </YuText>,
                "style": Object {
                  "height": "100%",
                  "justifyContent": "center",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": 1234,
                  "style": Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  },
                },
                "ref": null,
                "rendered": 1234,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Coins
                  color="#333333"
                />,
                "style": Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "color": "#333333",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`TopBar should render with timer 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopBar
    coins={1234}
    onPressLeftIcon={[MockFunction]}
    timer="11:58:00"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[MockFunction]}
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 16,
              "paddingHorizontal": 16,
              "position": "absolute",
            }
          }
        >
          <Menu
            color="#333333"
          />
        </TouchableOpacity>,
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 355,
              "position": "absolute",
            }
          }
        >
          <Logo
            color="#333333"
          />
          <YuText
            style={
              Object {
                "color": "#333333",
                "fontSize": 36,
                "marginTop": 4,
                "paddingLeft": 10,
              }
            }
          />
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            }
          }
        >
          <View
            style={
              Object {
                "height": "100%",
                "justifyContent": "center",
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                }
              }
            >
              1234
            </YuText>
          </View>
          <View
            style={
              Object {
                "alignSelf": "flex-start",
                "marginTop": -16,
              }
            }
          >
            <Coins
              color="#333333"
            />
          </View>
        </View>,
      ],
      "style": Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "center",
        "marginTop": 8,
        "width": "100%",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": Array [
            <Menu
              color="#333333"
            />,
            null,
          ],
          "onPress": [MockFunction],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "left": 16,
            "paddingHorizontal": 16,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#333333",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Logo
              color="#333333"
            />,
            <YuText
              style={
                Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginTop": 4,
                  "paddingLeft": 10,
                }
              }
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "left": 355,
            "position": "absolute",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "color": "#333333",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": null,
              "style": Object {
                "color": "#333333",
                "fontSize": 36,
                "marginTop": 4,
                "paddingLeft": 10,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>
            </View>,
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                }
              }
            >
              <Coins
                color="#333333"
              />
            </View>,
          ],
          "style": Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 30,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>,
              "style": Object {
                "height": "100%",
                "justifyContent": "center",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": 1234,
                "style": Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginBottom": -8,
                  "marginRight": 16,
                },
              },
              "ref": null,
              "rendered": 1234,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Coins
                color="#333333"
              />,
              "style": Object {
                "alignSelf": "flex-start",
                "marginTop": -16,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": "100%",
                "left": 16,
                "paddingHorizontal": 16,
                "position": "absolute",
              }
            }
          >
            <Menu
              color="#333333"
            />
          </TouchableOpacity>,
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": "100%",
                "left": 355,
                "position": "absolute",
              }
            }
          >
            <Logo
              color="#333333"
            />
            <YuText
              style={
                Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginTop": 4,
                  "paddingLeft": 10,
                }
              }
            />
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "position": "absolute",
                "right": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "height": "100%",
                  "justifyContent": "center",
                }
              }
            >
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  }
                }
              >
                1234
              </YuText>
            </View>
            <View
              style={
                Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                }
              }
            >
              <Coins
                color="#333333"
              />
            </View>
          </View>,
        ],
        "style": Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 56,
          "justifyContent": "center",
          "marginTop": 8,
          "width": "100%",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": Array [
              <Menu
                color="#333333"
              />,
              null,
            ],
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 16,
              "paddingHorizontal": 16,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Logo
                color="#333333"
              />,
              <YuText
                style={
                  Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginTop": 4,
                    "paddingLeft": 10,
                  }
                }
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": "100%",
              "left": 355,
              "position": "absolute",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "color": "#333333",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "style": Object {
                  "color": "#333333",
                  "fontSize": 36,
                  "marginTop": 4,
                  "paddingLeft": 10,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "height": "100%",
                    "justifyContent": "center",
                  }
                }
              >
                <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 36,
                      "marginBottom": -8,
                      "marginRight": 16,
                    }
                  }
                >
                  1234
                </YuText>
              </View>,
              <View
                style={
                  Object {
                    "alignSelf": "flex-start",
                    "marginTop": -16,
                  }
                }
              >
                <Coins
                  color="#333333"
                />
              </View>,
            ],
            "style": Object {
              "alignItems": "center",
              "flexDirection": "row",
              "position": "absolute",
              "right": 30,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <YuText
                  style={
                    Object {
                      "color": "#333333",
                      "fontSize": 36,
                      "marginBottom": -8,
                      "marginRight": 16,
                    }
                  }
                >
                  1234
                </YuText>,
                "style": Object {
                  "height": "100%",
                  "justifyContent": "center",
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": 1234,
                  "style": Object {
                    "color": "#333333",
                    "fontSize": 36,
                    "marginBottom": -8,
                    "marginRight": 16,
                  },
                },
                "ref": null,
                "rendered": 1234,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Coins
                  color="#333333"
                />,
                "style": Object {
                  "alignSelf": "flex-start",
                  "marginTop": -16,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "color": "#333333",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
